src/test/ui/parser/issue-33413.stderr
error: expected pattern, found `*`
  --> $DIR/issue-33413.rs:14:10
   |
LL |     fn f(*, a: u8) -> u8 {} //~ ERROR expected pattern, found `*`
   |          ^ expected pattern

error: aborting due to previous error

